# testProject

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
goods/: admin.py  models.py  serializers.py  urls.py  views.py
goods/migrations/: 0001_initial.py
products/: admin.py  permissions.py  serializers.py  urls.py  views.py
supplier/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
supplier/migrations/: 0001_initial.py
supplyers/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  managers.py  models.py  serializers.py  urls.py
users/management/commands/: cau.py  cuu.py
users/migrations/: 0001_initial.py
